Fix navbar item margin to ensure proper alignment

--- a/index.css
+++ b/index.css
@@ -81,8 +81,9 @@ li::marker {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .nav > li {
-  margin: 12.5px 10px;
+  /* margin: 12.5px 10px; */
   float: right;
+  margin: 12.5px 10px !important;
 }
 .nav > li > a {
   font-family: 'Ubuntu';
